EKS/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-shop
spec:
  ingressClassName: "nginx"  # Use this field instead of the annotation
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robot-shop
                port:
                  number: 80
